# Typing-Service

./: .gitignore  CMakeLists.txt  README.md  client.cpp  dataparser.py  install.sh  server.py
backend/: server.cpp
frontend/: package-lock.json
frontend/app/: page.module.css  page.tsx
frontend/app/api/typing/: route.ts
src/: client.cpp  dataparser.py  server.py
